--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -623,8 +623,8 @@
   "global.apply": "Apply",
   "global.assets.assetsLabel": "Assets",
   "global.assets.assetLabel": "Asset",
-  "global.assets": "{qty, plural, one {asset} other {assets}}",
-  "global.pools": "{qty, plural, one {pool} other {pools}}",
+  "global.assets": "{qty, plural, one {asset} other {asset(s)}}",
+  "global.pools": "{qty, plural, one {DEX} other {DEX(es)}}",
   "global.price": "Price",
   "global.available": "available",
   "global.availableFunds": "Available funds",
