Design/updates and fixes (#2754)
Signed-off-by: Juliano Lazzarotto <30806844+stackchain@users.noreply.github.com>
Co-authored-by: Juliano Lazzarotto <30806844+stackchain@users.noreply.github.com>
Co-authored-by: jorbuedo <jorbuedo@gmail.com>

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -123,7 +123,7 @@
   "swap.swapScreen.swapTitle": "Swap",
   "swap.swapScreen.batcherFee": "Batcher Fee",
   "swap.swapScreen.dex": "dex",
-  "swap.swapScreen.tokenSwapTab": "Token swap",
+  "swap.swapScreen.tokenSwapTab": "Asset swap",
   "swap.swapScreen.ordersSwapTab": "Orders",
   "swap.swapScreen.openOrders": "Open orders",
   "swap.swapScreen.completedOrders": "Completed orders",
@@ -143,7 +143,7 @@
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.slippageToleranceError": "Slippage must be a number between 0 and 100 and have up to 1 decimal",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
-  "swap.swapScreen.selectPool": "Select pool",
+  "swap.swapScreen.selectPool": "Select DEX",
   "swap.swapScreen.seeOnExplorer": "see on explorer",
   "swap.swapScreen.eachVerifiedToken": "Each verified tokens gets",
   "swap.swapScreen.verifiedBadge": "verified badge",
@@ -151,7 +151,7 @@
   "swap.swapScreen.transactionSigned": "Transaction signed",
   "swap.swapScreen.transactionDisplay": "Your transactions will be displayed both in the list of transaction and Open swap orders",
   "swap.swapScreen.poolVerificationInfo": "Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
-  "swap.swapScreen.poolFee": "Pool Fee",
+  "swap.swapScreen.poolFee": "DEX Fee",
   "swap.swapScreen.assetsIn": "This asset is in my portfolio",
   "swap.swapScreen.noAssetsFound": "No assets found for this pair",
   "swap.swapScreen.noAssetsFoundFor": "No assets found for \"{search}\"",
@@ -623,8 +623,8 @@
   "global.apply": "Apply",
   "global.assets.assetsLabel": "Assets",
   "global.assets.assetLabel": "Asset",
-  "global.assets": "{qty, plural, one {asset} other {assets}}",
-  "global.pools": "{qty, plural, one {pool} other {pools}}",
+  "global.assets": "{qty, plural, one {asset} other {asset(s)}}",
+  "global.pools": "{qty, plural, one {DEX} other {DEX(es)}}",
   "global.price": "Price",
   "global.available": "available",
   "global.availableFunds": "Available funds",
