--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -133,6 +133,7 @@
   "swap.swapScreen.swapTo": "Swap to",
   "swap.swapScreen.currentBalance": "Current balance",
   "swap.swapScreen.notEnoughBalance": "Not enough balance",
+  "swap.swapScreen.notEnoughFeeBalance": "Not enough balance, please consider the fees",
   "swap.swapScreen.notEnoughSupply": "Not enough supply in the pool",
   "swap.swapScreen.noPool": "This pair is not available in any liquidity pool",
   "swap.swapScreen.balance": "Balance",
